--- a/ansible/index.html
+++ b/ansible/index.html
@@ -243,7 +243,7 @@ popular tools in that area.<i><p>
         <textarea name="comments" rows = "12" cols = "35">Send your comments....</textarea>
         <br>
      <h5><span class="w3-code w3-green"><input type="submit" name="submit" value="Send" />
-        <form action="mailto:Allishah2490@gmail.com" 
+        <form action="mailto:linuxhero123@gmail.com" 
          enctype="text/plain" onsubmit="location.href='thanks.html';" >
         <input type="reset" name="reset" value="Clear Form" />
       </span></h5>
