--- a/privacy/index.html
+++ b/privacy/index.html
@@ -75,15 +75,22 @@ body, html {
 <body>
 
 <div class="navbar">
-  <a href="http://linuxhero.tk/#home">Home</a>
+  <a href="#home">Home</a>
    <div class="dropdown">
      <button class="dropbtn">Linux 
         <i class="fa fa-caret-down"></i>
      </button>
      <div class="dropdown-content">
-      <a href="http://linuxhero.tk/linuxinfo/">Linux Introduction</a>
-      <a href="http://linuxhero.tk/linuxdistros/">Linux Distributions</a>
-      <a href="#">Link 3</a>
+        <a href="https://linuxhero.tk/linuxinfo/">Linux Introduction</a>
+       <a href="https://linuxhero.tk/linuxdistros/">Linux Distributions</a>
+       <a href="https://linuxhero.tk/linuxcommands/">Linux Commands</a>
+       <a href="https://linuxhero.tk/ntp/">Configure NTP</a>
+       <a href="https://linuxhero.tk/ssh/">Configure SSH</a>
+       <a href="https://linuxhero.tk/nfs/">Configure NFS</a>
+       <a href="https://linuxhero.tk/iscsi/">Configure iSCSI Storage</a>  
+        <a href="https://linuxhero.tk/dhcp/">Configure Dnsmasq</a>
+       <a href="https://linuxhero.tk/ftp/">Configure FTP Server</a>
+       <a href="https://linuxhero.tk/lvm/">Configure LVM</a>
      </div>
     </div> 
    <div class="dropdown">
@@ -91,9 +98,11 @@ body, html {
        <i class="fa fa-caret-down"></i>
      </button>
      <div class="dropdown-content">
-      <a href="http://linuxhero.tk/webapp/">What is devops?</a>
-      <a href="https://mail.google.com/mail/u/0/#inbox">What are the tools of devops?</a>
-      <a href="#">Link 3</a>
+      <a href="https://linuxhero.tk/Analyzebottlenecks/">Steps To Analyze Linux Performance Bottlenecks</a>
+      <a href="https://linuxhero.tk/cpubottlenecks/">CPU Bottlenecks</a>
+        <a href="https://linuxhero.tk/memorybottlenecks/">Memory Bottlenecks</a>
+       <a href="https://linuxhero.tk/diskbottlenecks/">Disk Bottlenecks</a>
+       <a href="https://linuxhero.tk/networkbottlenecsk/">Network Bottlenecks</a>
      </div>
     </div>
    <div class="dropdown">
@@ -101,9 +110,24 @@ body, html {
        <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
-      <a href="http://linuxhero.tk/webapp/">What is devops?</a>
-      <a href="https://mail.google.com/mail/u/0/#inbox">What are the tools of devops?</a>
-      <a href="#">Link 3</a>
+      <a href="https://linuxhero.tk/devopsinfo/">What is Devops?</a>
+      <a href="https://linuxhero.tk/devopstools/">Devops Tools</a>
+      <a href="https://linuxhero.tk/jenkins/">Configure Jenkins</a>
+      <a href="https://linuxhero.tk/docker/">Configure Docker</a>
+      <a href="https://linuxhero.tk/kubernetes/">Configure Kubernetes</a>
+      <a href="https://linuxhero.tk/puppet/">Configure Puppet</a>
+      <a href="https://linuxhero.tk/ansible/">Configure Ansible</a>
+      <a href="https://linuxhero.tk/dockercommands/">Docker Commands</a>
+      <a href="https://linuxhero.tk/kubernetescommmand/">Kubernetes Commands</a>
+    </div>
+  </div>
+   <div class="dropdown">
+    <button class="dropbtn">Devops Projects
+       <i class="fa fa-caret-down"></i>
+    </button>
+    <div class="dropdown-content">
+      <a href="https://linuxhero.tk/devopsproject1/">Linux Automation using devops tools</a>
+ 
     </div>
   </div>
   <div class="dropdown">
@@ -111,14 +135,14 @@ body, html {
        <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
-      <a href="http://linuxhero.tk/webapp/">What is devops?</a>
-      <a href="https://mail.google.com/mail/u/0/#inbox">What are the tools of devops?</a>
-      <a href="#">Link 3</a>
+      <a href="https://linuxhero.tk/nagios/">Configure Nagios</a>
+      <a href="https://linuxhero.tk/splunk/"">Configure Splunk</a>
     </div>
   </div>
-    <a href="http://linuxhero.tk/#Topics">New Topics</a>
-    <a href="http://linuxhero.tk/#about">About</a>
-    <a href="http://linuxhero.tk/#contact">Contact Us</a>
+    <a href="https://linuxhero.tk/#Topics">New Topics</a>
+    <a href="https://linuxhero.tk/privacy/">Privacy Policy</a>
+    <a href="https://linuxhero.tk/#about">About</a>
+    <a href="https://linuxhero.tk/#contact">Contact Us</a>
   </div>
 
 <!-------------Top Menu End------------->
@@ -157,19 +181,19 @@ body, html {
 <!-- Contact/Area Container -->
  
 <div class="w3-container" id="contact">
-    <h2>Please email me if you face any issue.</h2>
+    <h5><span class="w3-code w3-black">Please email me if you face any issue.</span></h5>
     <form action="mailto:Mdsulemanroayl23@gmail.com" method="get" enctype="text/plain">
       <p><strong>Name: <input type="text" name="name"/></p>
       <p><strong>Email: <input type="text" name="email"/></p>
       <p><strong>Comments:
         <br />
-        <textarea name="comments" rows = "12" cols = "35">Send your comments to owner.</textarea>
+        <textarea name="comments" rows = "12" cols = "35">Send your comments....</textarea>
         <br>
-      <p><input type="submit" name="submit" value="Send" />
-        <form action="mailto:allishah2490@gmail.com" 
+     <h5><span class="w3-code w3-green"><input type="submit" name="submit" value="Send" />
+        <form action="mailto:Allishah2490@gmail.com" 
          enctype="text/plain" onsubmit="location.href='thanks.html';" >
         <input type="reset" name="reset" value="Clear Form" />
-      </p>
+      </span></h5>
     </form>
   </body>
   </div>
