--- a/index.html
+++ b/index.html
@@ -174,6 +174,7 @@ body, html {
   <div class="w3-container" style="padding-bottom:32px;" id="Topics">
   <div class="w3-content" style="max-width:700px">
     <h5 class="w3-center w3-padding-48"><span class="w3-tag w3-wide">New Topics Added</span></h5>
+    <script data-ad-client="ca-pub-9816877488746708" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <li><a href="https://linuxhero.tk/kubernetesqa/">Kubernetes Interview QA</a></li>
     <li><a href="https://linuxhero.tk/devopsqa/">Devops Interview QA</a></li>
      <li><a href="https://linuxhero.tk/ansibledoc/">Ansible Document</a></li>
