--- a/linuxinfo/index.html
+++ b/linuxinfo/index.html
@@ -75,7 +75,7 @@ body, html {
 <body>
 
 <div class="navbar">
-  <a href="#home">Home</a>
+<a href="https://linuxhero.tk">Home</a>
    <div class="dropdown">
      <button class="dropbtn">Linux 
         <i class="fa fa-caret-down"></i>
