--- a/nfs/index.html
+++ b/nfs/index.html
@@ -179,9 +179,9 @@ This example is based on the environment below.<b><p>
 <br>[root@server ~]# systemctl enable rpcbind nfs-server
 <br>  
  <br># allow NFSv4
-<br>[root@dlp ~]# firewall-cmd --add-service=nfs --permanent
+<br>[root@server ~]# firewall-cmd --add-service=nfs --permanent
 <br>success
-<br>[root@dlp ~]# firewall-cmd --reload
+<br>[root@server ~]# firewall-cmd --reload
 <br>success
 </span></h5>
 <p><b>Client Configuration:-<b><p>
