--- a/iscsi/index.html
+++ b/iscsi/index.html
@@ -217,7 +217,7 @@ Configure iSCSI Target</span></h5>
       <br>o- portals ..................... [Portals: 1]
         <br>o- 0.0.0.0:3260 ...................... [OK]
     <br>
-    <br>
+    <br>#Create LUN
     <br>/iscsi> iqn.2020-04.example.com:taget/tpg1/
     <br>/iscsi/iqn.20...m:target/tpg1> luns/ create /backstores/fileio/filetest
 Created LUN 0.
