--- a/dhcp/index.html
+++ b/dhcp/index.html
@@ -215,7 +215,7 @@ Then, Dnsmasq will answer to queries from clients.<b><p>
 <br>
 <br>[root@client ~]# dig server.example.com.
 <br>
-[root@desktop ~]# dig -x 10.0.0.30
+[root@client ~]# dig -x 10.0.0.30
 </span></h5> 
 <!-- Menu Container -->
 
