--- a/lvm/index.html
+++ b/lvm/index.html
@@ -220,7 +220,7 @@ This is the basic operation of managing physical  Volumes.<p>
 
 <p><b>Change Volume Group's name<b><p>
     
-<h5><span class="w3-code w3-black">[root@server ~]# vgrename vg_dlp vg_example
+<h5><span class="w3-code w3-black">[root@server ~]# vgrename vg_srv vg_example
 <br>Volume group "vg_srv" successfully renamed to "vg_example" vgdisplay
   
 <br>
