--- a/ansible/index.html
+++ b/ansible/index.html
@@ -193,7 +193,7 @@ popular tools in that area.<i><p>
  <h5><span class="w3-code w3-black">[root@server ~]#  yum install epel-release -y
     </span></h5>
  <br>
- <h5><span class="w3-code w3-red">Step:2  Install Anisble using yum command
+ <h5><span class="w3-code w3-red">Step:2  Install Ansible using yum command
     </span></h5>
   <h5><span class="w3-code w3-black">[root@server ~]# yum install ansible
   <br>[root@server ~]# ansible --version
@@ -228,7 +228,7 @@ popular tools in that area.<i><p>
  <br>[root@server ~]# ansible -m command -a "df -Th" 'my-servers' > /command-output.txt
 </span></h5> 
 <br>
-<h5><span class="w3-code w3-red">Now, You are ready to use anisble.</span></h5> 
+<h5><span class="w3-code w3-red">Now, You are ready to use ansible.</span></h5> 
 
 
 <!-- Contact/Area Container -->
