--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@ body, html {
     </div>
   </div>
     <a href="#Topics">New Topics</a>
+    <a href="https://linuxhero.tk/games/">Fun</a>
     <a href="https://linuxhero.tk/privacy/">Privacy Policy</a>
     <a href="#about">About</a>
     <a href="#contact">Contact Us</a>
