--- a/devopsproject1/index.html
+++ b/devopsproject1/index.html
@@ -185,7 +185,7 @@ Click ok</span></h5>
    <img src="/img1.jpg" style="width:100%;max-width:1000px" class="w3-margin-top">
   </div>
   <br>
-   <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">STEP 2: Mark Build periodically >>  >> Click saveProvide cron job time of execution [change time according to your need]</span></h5>
+   <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">STEP 2: Mark Build periodically >> Provide cron job time of execution [change time according to your need] >> Click save</span></h5>
          <div class="w3-content" style="max-width:700px">
    <img src="/img2.jpg" style="width:100%;max-width:1000px" class="w3-margin-top">
   </div>
