--- a/marionew/moby.html
+++ b/marionew/moby.html
@@ -6,5 +6,5 @@ Jeu de plateforme : Les aventures de Mario !<br>
 <br>
 <iframe src=moby2.htm width=400 height=250 scrolling=no></iframe>
 <br>
-Se controle avec les flèches du clavier.
+Se controle avec les flÃ¨ches du clavier.
 </html>
