--- a/index.html
+++ b/index.html
@@ -148,7 +148,14 @@ body, html {
     </div>
   </div>
     <a href="#Topics">New Topics</a>
-    <a href="https://linuxhero.tk/games/">Fun</a>
+     <div class="dropdown">
+    <button class="dropbtn">Fun 
+       <i class="fa fa-caret-down"></i>
+    </button>
+    <div class="dropdown-content">
+      <a href="https://linuxhero.tk/mario/">Play Mario on PC only</a>
+    </div>
+  </div>                 
     <a href="https://linuxhero.tk/privacy/">Privacy Policy</a>
     <a href="#about">About</a>
     <a href="#contact">Contact Us</a>
