--- a/mario/index.html
+++ b/mario/index.html
@@ -33,6 +33,7 @@
     <div id="out_mapselect" class="bar1">
       <div class="label">- Map Select -</div>
       <div id="in_mapselect" class="expander"></div>
+	<a href="https://linuxhero.tk/">More Games click here</a>    
     </div>
     
     <!-- Options popup -->
