--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ body, html {
       <a href="https://linuxhero.tk/mario/">Play Mario on PC only</a>
       <a href="https://linuxhero.tk/tetris/">Play Tetris on PC only</a>  
       <a href="https://linuxhero.tk/snake/">Play Snake on PC only</a>     
-      <a href="https://linuxhero.tk/snake/">Play Contra on PC only</a>
+      <a href="https://linuxhero.tk/contra/contra-client/">Play Contra on PC only</a>
     </div>
   </div>                 
     <a href="https://linuxhero.tk/privacy/">Privacy Policy</a>
