--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@ body, html {
       <a href="https://linuxhero.tk/tetris/">Play Tetris on PC only</a>  
       <a href="https://linuxhero.tk/snake/">Play Snake on PC only</a>     
       <a href="https://linuxhero.tk/contra/contra-client/">Play Contra on PC only</a>
+      <a href="https://linuxhero.tk/paceman/">Play paceman on adnroid and PC  both</a>
     </div>
   </div>                 
     <a href="https://linuxhero.tk/privacy/">Privacy Policy</a>
