--- a/comment/index.html
+++ b/comment/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -28,7 +28,7 @@
 
                     <div class="section">
                         <label class="field prepend-icon">
-                            <input type="email" name="email" id="email" class="gui-input" placeholder="Enter Email...">
+                            <input type="email" name="email" id="linuxhero123@gmail.com" class="gui-input" placeholder="Enter Email...">
                             <span class="field-icon"><i class="fa fa-envelope"></i></span>
                         </label>
                     </div><!-- end section -->
