--- a/index.html
+++ b/index.html
@@ -213,7 +213,9 @@ body, html {
 <script data-ad-client="ca-pub-9816877488746708" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- Menu Container -->
 
-
+<!-- Ezoic - Sidebar top - sidebar -->
+<div id="ezoic-pub-ad-placeholder-101"> </div>
+<!-- End Ezoic - Sidebar top - sidebar -->
 <!-- Contact/Area Container -->
  
 <div class="w3-container" id="contact">
