--- a/Analyzebottlenecks/index.html
+++ b/Analyzebottlenecks/index.html
@@ -180,7 +180,7 @@ acceptable performance level.<p>
 performance.<b></p>
  </div>
 </div>
-
+<script data-ad-client="ca-pub-9816877488746708" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- Menu Container -->
 
 
