--- a/docker/index.html
+++ b/docker/index.html
@@ -207,7 +207,7 @@ that can change quickly.<i><p>
 <br>
 <h5><span class="w3-code w3-red">Step:5 Manage Docker Service
 </span></h5>
-
+<script data-ad-client="ca-pub-9816877488746708" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <h5><span class="w3-code w3-black">[root@server ~]# systemctl start docker
 <br>[root@server ~]# systemctl enable docker
 </span></h5> 
