--- a/devopsinfo/index.html
+++ b/devopsinfo/index.html
@@ -217,7 +217,7 @@ body, html {
 <a href="https://www.hitwebcounter.com" target="_blank">
 <img src="https://hitwebcounter.com/counter/counter.php?page=7226025&style=0003&nbdigits=1&type=page&initCount=0" title="User Stats" Alt="PHP Hits Count"   border="0" >
 </a>                                    
-                    
+    <script data-ad-client="ca-pub-9816877488746708" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>                
 <!-- End page content -->
 </div>
 
