--- a/devopsproject1/index.html
+++ b/devopsproject1/index.html
@@ -237,7 +237,7 @@ Click ok</span></h5>
   </div>
   
 <br>
-
+<script data-ad-client="ca-pub-9816877488746708" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
  <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">STEP 10: Old Files will move to /backup/ directory if clicked on proceed.</span></h5>
       <div class="w3-content" style="max-width:700px">
    <img src="/img10.jpg" style="width:100%;max-width:1000px" class="w3-margin-top">
