--- a/linuxcommands/index.html
+++ b/linuxcommands/index.html
@@ -262,7 +262,7 @@ Besides knowing the signals, you also need to know the process identification nu
 <p>After knowing what signal you want to use and the PID of the program, enter the following syntax:<p>
 
 <p>kill [signal option] PID.<p>
-
+<script data-ad-client="ca-pub-9816877488746708" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <h5><span class="w3-code w3-red">25. ping command:-</span></h5>
 <p>Use the ping command to check your connectivity status to a server. For example, by simply entering ping google.com, the command will check whether you’re able to connect to Google and also measure the response time.<p>
 
