--- a/kubernetescommmand/index.html
+++ b/kubernetescommmand/index.html
@@ -257,7 +257,7 @@ $ kubectl scale deployment/POD_NAME --replicas=N
 $ kubectl get daemonsets
 <br>$ kubectl get ds
 </span></h5>
-
+<script data-ad-client="ca-pub-9816877488746708" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">12. Scheduler</span></h5>
 
 <h5><span class="w3-code w3-red">NodeSelector based policy:
