--- a/paceman/index.html
+++ b/paceman/index.html
@@ -232,7 +232,7 @@
 			
 		</div>
 		<!-- Game Menu End -->
-		
+		<script data-ad-client="ca-pub-9816877488746708" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 	</div>
 		
 	<div class="description nomobile">
