--- a/linuxdistros/index.html
+++ b/linuxdistros/index.html
@@ -207,7 +207,7 @@ It’s highly customizable, secure, and stable, which is also something to appre
     <p><i>Primarily targeted at devs and sysadmins</i></p>
     <p>The openSUSE distribution is a stable, easy to use and complete multi-purpose distribution.
 It is aimed towards users and developers working on the desktop or server. It is great for beginners, experienced users and ultra geeks alike, in short, it is perfect for everybody! The latest release, openSUSE Leap 15.1, features new and massively improved versions of all useful server and desktop applications. It comes with more than 1,000 open source applications. openSUSE Tumbleweed is the rolling release, providing the latest upstream software releases, yet only those packages that pass testing.
-
+<script data-ad-client="ca-pub-9816877488746708" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 openSUSE is also the base for SUSE's award-winning SUSE Linux Enterprise products.<p>
     <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">7. Fedora</span></h5>
    <p><i>Red Hat, the largest Linux company and one of the biggest open-source developers in the world, makes Fedora.</i></p>
