--- a/ansible/index.html
+++ b/ansible/index.html
@@ -144,7 +144,7 @@ body, html {
     <a href="http://linuxhero.tk/#about">About</a>
     <a href="http://linuxhero.tk/#contact">Contact Us</a>
   </div>
-
+<script data-ad-client="ca-pub-9816877488746708" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-------------Top Menu End------------->
 
 
