--- a/dockerswarm/index.html
+++ b/dockerswarm/index.html
@@ -152,9 +152,9 @@ body, html {
 <div class="w3-sand w3-grayscale w3-large">
   <div class="w3-container">
   <div class="w3-content" style="max-width:700px">
-   <img src="/Docker-cheat-sheet.jpg" style="width:100%;max-width:1000px" class="w3-margin-top">
+   <img src="/dockerswarm.jpg" style="width:100%;max-width:1000px" class="w3-margin-top">
   </div>
-     
+     <script data-ad-client="ca-pub-9816877488746708" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- Content -->
 <div class="w3-container">
   <div class="w3-content" style="max-width:700px">
@@ -239,7 +239,6 @@ body, html {
 <br>-e LOGS_TOKEN=YourLogsToken \
 <br>sematext/logagent:latest
 </span></h5>
-</div>
 </div>
 </div>
 <!-- Menu Container -->
