--- a/index.html
+++ b/index.html
@@ -236,6 +236,9 @@ body, html {
   </body>
   </div>
 </div>
+
+  <script type="text/javascript"> var infolinks_pid = 3249810; var infolinks_wsid = 0; </script> <script type="text/javascript" src="//resources.infolinks.com/js/infolinks_main.js"></script>
+                                                                   
 <!-- hitwebcounter Code START -->
 <h5><span class="w3-code w3-red">views</span></h5> 
 <a href="https://www.hitwebcounter.com" target="_blank">
