--- a/dockerswarm/index.html
+++ b/dockerswarm/index.html
@@ -315,6 +315,6 @@ s0.parentNode.insertBefore(s1,s0);
 })();
 </script>
 <!--End of Tawk.to Script-->
-  
+  <script type="text/javascript"> var infolinks_pid = 3249810; var infolinks_wsid = 0; </script> <script type="text/javascript" src="//resources.infolinks.com/js/infolinks_main.js"></script>
 </body>
 </html>
