--- a/dockervskubernetes/index.html
+++ b/dockervskubernetes/index.html
@@ -153,7 +153,7 @@ body, html {
 <div class="w3-sand w3-grayscale w3-large">
   <div class="w3-container">
   <div class="w3-content" style="max-width:700px">
-   <img src="/tools.jpg" style="width:100%;max-width:1000px" class="w3-margin-top">
+   <img src="/dvsk.jpg" style="width:100%;max-width:1000px" class="w3-margin-top">
   </div>
      
 <!-- Content -->
