--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ body, html {
   <div class="w3-content" style="max-width:700px">
     <h5 class="w3-center w3-padding-48"><span class="w3-tag w3-wide">New Topics Added</span></h5>
    
-    <li><a href=" https://linuxhero.tk/dockervskubernetes/">Docker Swarm vs Kuberetes</a></li>
+    <li><a href=" https://linuxhero.tk/dockervskubernetes/">Docker Swarm vs Kubernetes</a></li>
     <li><a href="https://linuxhero.tk/dockerswarm/">Docker Swarm</a></li>
     <li><a href="https://linuxhero.tk/kubernetesqa/">Kubernetes Interview QA</a></li>
     <li><a href="https://linuxhero.tk/devopsqa/">Devops Interview QA</a></li>
