--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ body, html {
        <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
-      <a href="http://linuxhero.tk/devopsproject1/">Linux Automation using devops tools</a>
+      <a href="https://www.youtube.com/watch?v=0i8meUDW2A0">Devops Project Lab</a>
  
     </div>
   </div>
